--- a/card.css
+++ b/card.css
@@ -1,1 +1,74 @@
+*{
+    box-sizing: border-box;
+}
+
+body{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.artboard{
+    width: 1024px;
+    height: 768px;
+    display: flex;
+    justify-content: center;
+
+    background-color: #ff5e43;
+}
+
+.card{
+    margin-top: 3.5em;
+    width:300px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    background-color: #dfedf1;
+    border-radius: 10px;
+
+}
+
+.card-header{
+    width: 100%;
+    text-align: center;   
+    background-color: #f6f6f6;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+}
+
+h2{
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #ff5e43;
+    text-transform: uppercase;
+    margin-top: 2rem;
+    margin-bottom: 0.68rem;
+}
+
+h3{
+    
+    margin-top:0;
+    font-size: 1.125em;
+    font-weight: 200;
+}
+
+.tazza{
+    margin-top: 4.3rem;
+}
+
+.cta{
+    margin-top:5rem;
+    width:15rem;
+    height:2.8rem;
+
+    text-transform: uppercase;
+    background-color: #ff5e43;
+    font-size: 1.1rem;
+    color:white;
+    letter-spacing: 1px;
+}
 
